# servilla_erp

./: .env.example  .gitignore
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  schema.sql
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  router.py  schemas.py
backend/app/migrations/: env.py
backend/app/models/: __init__.py  ciudades.py  clientes.py  facturacion.py  gastos.py  gestiones.py  labores.py  liquidaciones.py  nomina.py  ordenes.py  pagos_ciudades.py  personal.py  planillas_revisadas.py  transporte.py  usuarios.py
backend/app/routers/: buscar.py  clientes.py  facturacion.py  flujo.py  gastos.py  gestiones.py  labores.py  liquidaciones.py  nomina.py  ordenes.py  pagos_ciudades.py  personal.py  reportes.py  transporte.py
backend/app/schemas/: buscar.py  clientes.py  facturacion.py  gastos.py  gestiones.py  labores.py  liquidaciones.py  nomina.py  ordenes.py  pagos_ciudades.py  personal.py  reportes.py  transporte.py
backend/app/services/: bases_web.py  facturacion_service.py  (+2 more)
backend/scripts/: analisis_histo_vs_pg.py  backfill_subsidio_transporte.py  fix_planilla_nan.py  fix_tipo_gestion_csv.py  migrate_facturas_emitidas.py  migrate_facturas_transporte.py  migrate_mysql.py  sync_planillas_revisadas.py
backend/tests/: conftest.py  test_auth.py  test_carga_masiva_proteccion.py  test_clientes.py  test_courier_precios.py  test_facturacion.py  test_flujo.py  test_gastos.py  test_gestiones.py  test_labores.py  test_nomina.py  test_ordenes.py  test_pagos_ciudades.py  test_personal.py  test_reportes.py
(+72 files in other folders)
